<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bg2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titlebar">
        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrow_back_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="FAQ"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:layout_below="@+id/titlebar"
        android:layout_marginTop="5dp"
        android:background="@color/white"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c1"
        app:cardCornerRadius="7dp"
        android:elevation="7dp"
        android:layout_below="@+id/view"
        android:layout_marginTop="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q1"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/q1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a1"
                android:textSize="16sp"
                android:layout_below="@+id/q1"
                android:layout_marginTop="5dp"
                android:text="@string/a1"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c2"
        app:cardCornerRadius="7dp"
        android:elevation="7dp"
        android:layout_below="@+id/c1"
        android:layout_marginTop="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q2"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/q2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a2"
                android:textSize="16sp"
                android:layout_below="@+id/q2"
                android:layout_marginTop="5dp"
                android:text="@string/a2"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c3"
        app:cardCornerRadius="7dp"
        android:elevation="7dp"
        android:layout_below="@+id/c2"
        android:layout_marginTop="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q3"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/q3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a3"
                android:textSize="16sp"
                android:layout_below="@+id/q3"
                android:layout_marginTop="5dp"
                android:text="@string/a3"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/c4"
    app:cardCornerRadius="7dp"
    android:elevation="7dp"
    android:layout_below="@+id/c3"
    android:layout_marginTop="16dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q4"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/q4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a4"
            android:textSize="16sp"
            android:layout_below="@+id/q4"
            android:layout_marginTop="5dp"
            android:text="@string/a4"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c5"
        app:cardCornerRadius="7dp"
        android:elevation="7dp"
        android:layout_below="@+id/c3"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q5"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/q5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a5"
                android:textSize="16sp"
                android:layout_below="@+id/q5"
                android:layout_marginTop="5dp"
                android:text="@string/a5"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>